--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,9 @@
 .heading {
-  margin: auto;
-  margin-top: 49px;
-  margin-bottom: 77px;
+  margin: 49px auto 77px;
   width: 1344px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .heading-h {
