--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .heading {
   margin: 49px auto 77px;
   width: 1344px;
