--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -2,8 +2,8 @@
   position: relative;
   background-color: #2c2330;
   border-radius: 44px;
-  width: 1065px;
-  height: 623px;
+  width: 79.2%;
+  aspect-ratio: 1065 / 623;
 }
 
 .layout::after {
@@ -12,7 +12,7 @@
   top: 21px;
   width: 10px;
   height: 10px;
-  left: 525px;
+  left: calc(50% - 7.5px);
   border-radius: 50%;
   background-color: #d6b5ed;
   border: 2px solid #4f0b7b;
