--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,18 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 70%;
+  margin: auto;
 }
 
 .heading {
   margin: 49px auto 77px;
-  width: 1344px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .heading-h {
-  width: 1232px;
+  width: 97%;
 }
 
 .heading-h h1 {
@@ -26,7 +27,7 @@
 }
 
 .heading-h hr {
-  width: 1153px;
+  width: 94%;
   border-top: 3px solid #44babe;
   margin: 0;
   color: transparent;
@@ -34,7 +35,7 @@
 
 .heading p {
   font-weight: 600;
-  width: 1150px;
+  width: 93%;
   line-height: 138.9%;
   font-size: 22px;
   color: #532f88;
