--- a/components/elements/background/background.module.css
+++ b/components/elements/background/background.module.css
@@ -2,7 +2,7 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
 }
 
 .page-0 {
@@ -15,4 +15,8 @@
   left: 0px;
   top: 0px;
   transform: matrix(-0.95, 0.32, 0.32, 0.95, 0, 0);
+}
+
+.background-white {
+  background-color: #d9d9d9;
 }
