--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -29,7 +29,77 @@
 
 .navigation {
   position: absolute;
-  width: calc(100% - 105px);
+  width: 100%;
   display: flex;
   justify-content: space-between;
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1400px) {
+  .layout {
+    padding: 37px 42px 37px 45px;
+    border-radius: 36px;
+  }
+  .layout::after {
+    top: 17px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .layout {
+    padding: 28px 31px 28px 33px;
+    border-radius: 28px;
+  }
+  .layout::after {
+    top: 12px;
+    width: 8px;
+    height: 8px;
+  }
+}
+@media screen and (max-width: 992px) {
+  .layout {
+    padding: 19px 23px 19px 25px;
+    border-radius: 17px;
+  }
+  .layout::after {
+    top: 10px;
+    width: 5px;
+    height: 5px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .layout {
+    padding: 10px 13px 10px 15px;
+    border-radius: 10px;
+  }
+  .layout::after {
+    top: 4px;
+    width: 4px;
+    height: 4px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .layout {
+    width: 320px;
+    aspect-ratio: initial;
+    background-color: transparent;
+    border: none;
+    padding: 0px;
+    border-radius: 0;
+    min-height: 465px;
+  }
+  .layout::after {
+    content: none;
+  }
+
+  .container {
+    height: 568px;
+  }
 }
