--- a/components/elements/background/background.module.css
+++ b/components/elements/background/background.module.css
@@ -3,20 +3,5 @@
   width: 100%;
   height: 100%;
   position: absolute;
-}
-
-.page-0 {
-  background: linear-gradient(0deg, #26949a 4.44%, #4ed0cd 92.38%);
-}
-.page-0 svg {
-  position: absolute;
-  width: 949.02px;
-  height: 1074.02px;
-  left: 0px;
-  top: 0px;
-  transform: matrix(-0.95, 0.32, 0.32, 0.95, 0, 0);
-}
-
-.background-white {
-  background-color: #d9d9d9;
+  background-color: white;
 }
