--- a/components/elements/footer/footer.module.css
+++ b/components/elements/footer/footer.module.css
@@ -4,9 +4,35 @@
   left: 0;
   display: flex;
   align-items: flex-end;
+  justify-content: space-between;
   color: #838383;
 }
 
 .footer p {
   margin: 0;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 14px;
+  color: #838383;
+}
+
+.footer span {
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 14px;
+  color: #838383;
+}
+
+@media screen and (max-width: 600px) {
+  .footer p {
+    font-weight: 400;
+    font-size: 6px;
+    line-height: 8px;
+  }
+
+  .footer span {
+    font-weight: 300;
+    font-size: 6px;
+    line-height: 8px;
+  }
 }
