--- a/components/elements/sliderButtons/sliderButton.module.css
+++ b/components/elements/sliderButtons/sliderButton.module.css
@@ -4,9 +4,16 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+  z-index: 2;
 }
 
 .button svg {
   width: 27px;
   height: 50px;
+}
+
+@media screen and (max-width: 600px) {
+  .button {
+    margin: 10px;
+  }
 }
