--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -2,7 +2,7 @@
   position: relative;
   background-color: #2c2330;
   border-radius: 44px;
-  width: 79.2%;
+  width: 80.6%;
   aspect-ratio: 1065 / 623;
   display: flex;
   align-items: center;
@@ -37,8 +37,8 @@
 .container {
   position: relative;
   width: 100%;
-  height: 100%;
   display: flex;
+  aspect-ratio: 960 / 540;
   align-items: center;
   justify-content: center;
 }
@@ -99,7 +99,12 @@
     content: none;
   }
 
+  .navigation {
+    display: none;
+  }
+
   .container {
-    height: 568px;
+    aspect-ratio: unset;
+    align-items: start;
   }
 }
