--- a/components/elements/Quiz/quiz.module.css
+++ b/components/elements/Quiz/quiz.module.css
@@ -44,6 +44,11 @@
   content: attr(data-number);
   width: 56px;
   height: 56px;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 39px;
+  text-transform: uppercase;
+  color: #67656a;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -85,4 +90,10 @@
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+@media screen and (max-width: 600px) {
+  .answer {
+    width: 100%;
+  }
 }
