--- a/components/elements/footer/footer.module.css
+++ b/components/elements/footer/footer.module.css
@@ -2,13 +2,14 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  width: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
   color: #838383;
 }
 
-.footer p {
+.text {
   margin: 0;
   font-weight: 300;
   font-size: 12px;
@@ -16,7 +17,7 @@
   color: #838383;
 }
 
-.footer span {
+.code {
   font-weight: 300;
   font-size: 12px;
   line-height: 14px;
@@ -24,13 +25,13 @@
 }
 
 @media screen and (max-width: 600px) {
-  .footer p {
+  .text {
     font-weight: 400;
     font-size: 6px;
     line-height: 8px;
   }
 
-  .footer span {
+  .code {
     font-weight: 300;
     font-size: 6px;
     line-height: 8px;
