--- a/components/elements/footer/footer.module.css
+++ b/components/elements/footer/footer.module.css
@@ -3,6 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 0px;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
