--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -30,6 +30,8 @@
 .navigation {
   position: absolute;
   width: 100%;
+  height: 0;
+  margin-top: -25px;
   display: flex;
   justify-content: space-between;
 }
@@ -39,8 +41,8 @@
   width: 100%;
   display: flex;
   aspect-ratio: 960 / 540;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 1400px) {
