--- a/components/elements/Quiz/quiz.module.css
+++ b/components/elements/Quiz/quiz.module.css
@@ -9,9 +9,9 @@
 
 .heading {
   font-weight: 600;
-  border-radius: 7px;
-  font-size: 18px;
-  line-height: 22px;
+  border-radius: 0.4375rem;
+  font-size: 1.125rem;
+  line-height: 1.375rem;
   text-align: center;
   color: #ffffff;
   background-color: #532f88;
@@ -22,40 +22,40 @@
 }
 
 .answer {
-  border: 1px solid #67656a;
+  border: 0.0625rem solid #67656a;
   position: relative;
-  border-radius: 21px;
+  border-radius: 1.3125rem;
   font-weight: 600;
-  height: 56px;
+  height: 3.5rem;
   width: 84.87%;
   display: flex;
   align-items: center;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 0.875rem;
+  line-height: 1rem;
   text-transform: uppercase;
   color: #67656a;
   background-color: transparent;
   text-align: left;
-  padding-left: 56px;
+  padding-left: 3.5rem;
   cursor: pointer;
 }
 .answer::after {
   position: absolute;
   content: attr(data-number);
-  width: 56px;
-  height: 56px;
+  width: 3.5rem;
+  height: 3.5rem;
   font-weight: 600;
-  font-size: 32px;
-  line-height: 39px;
+  font-size: 2rem;
+  line-height: 2.4375rem;
   text-transform: uppercase;
   color: #67656a;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  border: 2px solid #67656a;
-  top: -4px;
-  left: -10px;
+  border: 0.125rem solid #67656a;
+  top: -0.25rem;
+  left: -0.625rem;
   background-color: white;
 }
 
