--- a/components/elements/footer/footer.module.css
+++ b/components/elements/footer/footer.module.css
@@ -3,8 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 0px;
-  display: flex;
+  height: 0.0rem;  display: flex;
   align-items: flex-end;
   justify-content: space-between;
   color: #838383;
@@ -12,15 +11,15 @@
 
 .text {
   font-weight: 300;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
   color: #838383;
 }
 
 .code {
   font-weight: 300;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
   color: #838383;
 }
 
