--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,37 +1,37 @@
 .layout {
   position: relative;
   background-color: #2c2330;
-  border-radius: 44px;
+  border-radius: 2.75rem;
   width: 80.6%;
   aspect-ratio: 1065 / 623;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 41px 50px 41px 55px;
+  padding: 2.5625rem 3.125rem 2.5625rem;
 }
 
 .layout::after {
   box-sizing: border-box;
   content: '';
   position: absolute;
-  top: 21px;
-  width: 10.4px;
-  height: 10.4px;
-  left: calc(50% - 7.5px);
+  top: 1.3125rem;
+  width: 0.65rem;
+  height: 0.65rem;
   border-radius: 50%;
   background-color: #d6b5ed;
-  border: 2px solid #4f0b7b;
+  left: calc(50% - 7.5px);
+  border: 0.125rem solid #4f0b7b;
 }
 
 .startPage::after {
-  border: 2px solid #26949a;
+  border: 0.125rem solid #26949a;
 }
 
 .navigation {
   position: absolute;
   width: 100%;
   height: 0;
-  margin-top: -25px;
+  margin-top: -1.5625rem;
   display: flex;
   justify-content: space-between;
 }
