--- a/components/pages/page1/page1.module.css
+++ b/components/pages/page1/page1.module.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 61.14%;
-  padding: 17px 0px 0px 22px;
+  padding: 1.0625rem 0rem 0rem 1.375rem;
   font-weight: 400;
-  font-size: 15px;
-  line-height: 15px;
+  font-size: 0.9375rem;
+  line-height: 0.9375rem;
   color: #532f88;
 }
 .page-1 h1 {
@@ -13,10 +13,10 @@
 }
 .page-1 span {
   font-weight: 600;
-  font-size: 18px;
-  line-height: 22px;
-  margin-top: 9px;
-  margin-bottom: 6px;
+  font-size: 1.125rem;
+  line-height: 1.375rem;
+  margin-top: 0.5625rem;
+  margin-bottom: 0.375rem;
   vertical-align: top;
   color: #532f88;
 }
@@ -42,8 +42,8 @@
 }
 .page-1 h2 {
   font-weight: 700;
-  font-size: 15px;
-  line-height: 15px;
+  font-size: 0.9375rem;
+  line-height: 0.9375rem;
   text-transform: uppercase;
   color: #955dc6;
 }
@@ -51,11 +51,11 @@
   font-weight: 400;
 }
 .block-1 {
-  padding: 0 7px 13px 13px;
-  margin-right: 9px;
+  padding: 0 0.4375rem 0.8125rem 0.8125rem;
+  margin-right: 0.5625rem;
 }
 .block-2 {
-  padding: 15px 15px 13px 15px;
+  padding: 0.9375rem 0.9375rem 0.8125rem 0.9375rem;
 }
 
 .button {
@@ -63,13 +63,13 @@
 }
 
 .footer-text {
-  margin-left: 22px;
-  margin-bottom: 12px;
+  margin-left: 1.375rem;
+  margin-bottom: 0.75rem;
   width: 57.29%;
 }
 .footer-code {
-  margin-right: 7px;
-  margin-bottom: 11px;
+  margin-right: 0.4375rem;
+  margin-bottom: 0.6875rem;
 }
 
 @media screen and (max-width: 600px) {
