--- a/components/pages/page10/page10.module.css
+++ b/components/pages/page10/page10.module.css
@@ -3,30 +3,30 @@
 }
 
 .page10 .heading {
-  margin: 16px 10px 21px 20px;
-  padding: 13px 44px 10px 38px;
+  margin: 1.0rem 0.625rem 1.3125rem 1.25rem;
+  padding: 0.8125rem 2.75rem 0.625rem 2.375rem;
 }
 
 .page10 .answer {
-  padding-left: 60px;
-  padding-right: 60px;
-  margin: 9px 0;
-  margin-left: 15px;
+  padding-left: 3.75rem;
+  padding-right: 3.75rem;
+  margin: 0.5625rem 0;
+  margin-left: 0.9375rem;
 }
 
 .page10 .button {
-  margin-top: 30px;
-  padding: 16px 40px 15px 47px;
+  margin-top: 1.875rem;
+  padding: 1.0rem 2.5rem 0.9375rem 2.9375rem;
 }
 
 .footer-text {
-  margin-left: 20px;
-  margin-bottom: 12px;
+  margin-left: 1.25rem;
+  margin-bottom: 0.75rem;
   width: 54.06%;
 }
 .footer-code {
-  margin-bottom: 11px;
-  margin-right: 5px;
+  margin-bottom: 0.6875rem;
+  margin-right: 0.3125rem;
   color: white;
 }
 
