--- a/components/pages/page11/page11.module.css
+++ b/components/pages/page11/page11.module.css
@@ -1,30 +1,30 @@
 .page-11 {
-  padding: 19px 23px 0px 22px;
+  padding: 1.1875rem 1.4375rem 0.0rem 1.375rem;
   flex-direction: column;
 }
 
 .pre-heading {
   font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
   text-transform: uppercase;
   color: #4f0b7b;
-  margin: 0 0 16px 0;
+  margin: 0 0 1.0rem 0;
 }
 
 .heading {
   width: 100%;
   margin: 0;
-  padding: 7px 0 6px 0;
+  padding: 0.4375rem 0 0.375rem 0;
   display: block;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #532f88;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1.0rem;
+  line-height: 1.25rem;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -41,8 +41,8 @@
   display: flex;
   flex-direction: column;
   font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 0.8125rem;
+  line-height: 1.0rem;
   color: #532f88;
 }
 
@@ -51,18 +51,18 @@
   flex-direction: row;
   align-items: unset;
   width: 100%;
-  padding: 0 20px;
-  padding-bottom: 7px;
+  padding: 0 1.25rem;
+  padding-bottom: 0.4375rem;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-bottom: 9px;
+  margin-bottom: 0.5625rem;
   background: #cdebec;
-  border-radius: 18px;
+  border-radius: 1.125rem;
 }
 
 .cell {
   display: flex;
-  margin: 6px 0;
+  margin: 0.375rem 0;
   width: fit-content;
   align-items: center;
   width: 33%;
@@ -74,8 +74,8 @@
 
 .cell-bold .text {
   font-weight: 700;
-  font-size: 15px;
-  line-height: 18px;
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
   text-transform: uppercase;
   color: #532f88;
 }
@@ -83,15 +83,15 @@
 .cell .icon {
   display: flex;
   align-items: center;
-  width: 30px;
-  height: 30px;
-  margin: 8px;
+  width: 1.875rem;
+  height: 1.875rem;
+  margin: 0.5rem;
 }
 
 .block h1 {
   font-weight: 700;
-  font-size: 15px;
-  line-height: 18px;
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
   text-transform: uppercase;
   color: #532f88;
   width: 100%;
@@ -106,55 +106,55 @@
 }
 
 .icon {
-  margin-right: 10px;
+  margin-right: 0.625rem;
 }
 
 .block p {
   margin: 0;
-  border-radius: 18px;
-  padding: 15px 15px 17px 15px;
-  margin-top: 14px;
+  border-radius: 1.125rem;
+  padding: 0.9375rem 0.9375rem 1.0625rem 0.9375rem;
+  margin-top: 0.875rem;
   font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 0.8125rem;
+  line-height: 1.0rem;
 
   color: #532f88;
 }
 
 .block-1 {
-  width: calc(50% - 11px);
-  margin-right: 11px;
+  width: calc(50% - 0.6875rem);
+  margin-right: 0.6875rem;
 }
 .block-1 p {
   background-color: #cdebec;
 }
 
 .block-2 {
-  width: calc(50% - 11px);
-  margin-left: 11px;
+  width: calc(50% - 0.6875rem);
+  margin-left: 0.6875rem;
 }
 .block-2 p {
   background-color: #f2edf9;
 }
 
 .button {
-  margin-top: 40px;
-  padding: 14px 60px 17px;
+  margin-top: 2.5rem;
+  padding: 0.875rem 3.75rem 1.0625rem;
   width: fit-content;
   align-self: flex-end;
-  line-height: 22px;
+  line-height: 1.375rem;
 }
 
 .footer-code {
-  margin-right: 5px;
-  margin-bottom: 11px;
+  margin-right: 0.3125rem;
+  margin-bottom: 0.6875rem;
 }
 .footer-text {
   font-weight: 300;
-  font-size: 10px;
-  line-height: 12px;
-  margin-left: 23px;
-  margin-bottom: 10px;
+  font-size: 0.625rem;
+  line-height: 0.75rem;
+  margin-left: 1.4375rem;
+  margin-bottom: 0.625rem;
   width: 73.85%;
 }
 
