--- a/components/pages/page13/page13.module.css
+++ b/components/pages/page13/page13.module.css
@@ -1,29 +1,29 @@
 .page-13 {
   flex-direction: column;
-  padding: 0 23px 0 19px;
+  padding: 0 1.4375rem 0 1.1875rem;
   align-items: center;
 }
 
 .pre-heading {
   font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
   color: #4f0b7b;
-  margin: 19px 0 0 0;
+  margin: 1.1875rem 0 0 0;
   width: 100%;
 }
 
 .heading {
   font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1.0rem;
+  line-height: 1.25rem;
   text-align: center;
   color: #ffffff;
   width: 45.31%;
-  padding: 3px 24px 2px 28px;
+  padding: 0.1875rem 1.5rem 0.125rem 0.1258rem;
   background: #532f88;
-  border-radius: 15px;
-  margin-top: 40px;
+  border-radius: 0.9375rem;
+  margin-top: 2.5rem;
 }
 
 .arrows {
@@ -38,43 +38,43 @@
 .blocks {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 7px;
+  margin-top: 0.4375rem;
   justify-content: space-between;
 }
 
 .purple-block {
-  width: calc(50% - 10px);
-  padding: 9px 11px 10px 20px;
+  width: calc(50% - 0.625rem);
+  padding: 0.5625rem 0.6875rem 0.625rem 1.25rem;
   background: #eae2f4;
-  margin: 0 5px 0;
-  border-radius: 15px;
+  margin: 0 0.3125rem 0;
+  border-radius: 0.9375rem;
 }
 .block-heading h3 {
   font-weight: 600;
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 0.8125rem;
+  line-height: 1.0rem;
   color: #532f88;
 }
 .purple-block p {
   font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 0.8125rem;
+  line-height: 1.0rem;
   color: #532f88;
 }
 .purple-block span {
-  font-size: 11px;
-  line-height: 13px;
+  font-size: 0.6875rem;
+  line-height: 0.8125rem;
 }
 
 .green-block {
-  padding: 14px 22px 15px 23px;
+  padding: 0.875rem 1.375rem 0.9375rem 1.4375rem;
   width: 100%;
   background: #03b7bf;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   font-weight: 700;
-  font-size: 15px;
-  margin-top: 25px;
-  line-height: 18px;
+  font-size: 0.9375rem;
+  margin-top: 1.5625rem;
+  line-height: 1.125rem;
   color: #ffffff;
 }
 .green-block p {
@@ -83,24 +83,24 @@
 
 .button {
   align-self: flex-end;
-  padding: 14px 60px 17px 59px;
-  margin-top: 25px;
+  padding: 0.875rem 3.75rem 1.0625rem 3.6875rem;
+  margin-top: 1.5625rem;
 }
 
 .footer-text {
   font-weight: 300;
   width: 75.83%;
-  font-size: 12px;
-  line-height: 14px;
-  margin-bottom: 7px;
-  margin-left: 19px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
+  margin-bottom: 0.4375rem;
+  margin-left: 1.1875rem;
 }
 .footer-code {
   font-weight: 300;
-  font-size: 12px;
-  line-height: 14px;
-  margin-right: 13px;
-  margin-bottom: 11px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
+  margin-right: 0.8125rem;
+  margin-bottom: 0.6875rem;
 }
 
 @media screen and (max-width: 600px) {
