--- a/components/pages/page3/page3.module.css
+++ b/components/pages/page3/page3.module.css
@@ -11,20 +11,20 @@
 }
 
 .page-3 .heading {
-  margin: 20px 0 18px 0;
+  margin: 1.25rem 0 1.125rem 0;
   width: 69.53%;
   text-transform: none;
   text-align: center;
 }
 
 .purple-block {
-  padding: 15px 22px 6px 17px;
-  margin-bottom: 10px;
+  padding: 0.9375rem 1.375rem 0.375rem 1.0625rem;
+  margin-bottom: 0.625rem;
 }
 
 .block p {
-  font-size: 15px;
-  line-height: 18px;
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
   margin: 0;
 }
 
@@ -33,28 +33,28 @@
 }
 
 .green-block {
-  padding: 13px 16px 14px;
+  padding: 0.8125rem 1.0rem 0.875rem;
 }
 
 .footer-text {
   width: 73.65%;
-  margin-left: 26px;
-  margin-bottom: 6px;
+  margin-left: 1.625rem;
+  margin-bottom: 0.375rem;
   font-weight: 300;
-  font-size: 10px;
-  line-height: 12px;
+  font-size: 0.625rem;
+  line-height: 0.75rem;
 }
 .footer-code {
-  margin-right: 9px;
-  margin-bottom: 11px;
+  margin-right: 0.5625rem;
+  margin-bottom: 0.6875rem;
 }
 
 .button {
   align-self: flex-end;
-  margin-top: 22px;
-  margin-right: -87px;
-  margin-bottom: 37px;
-  padding: 14px 60px 17px 59px;
+  margin-top: 1.375rem;
+  margin-right: -5.4375rem;
+  margin-bottom: 2.3125rem;
+  padding: 0.875rem 3.75rem 1.0625rem 3.6875rem;
 }
 
 @media screen and (max-width: 600px) {
