--- a/components/pages/page4/page4.module.css
+++ b/components/pages/page4/page4.module.css
@@ -3,26 +3,26 @@
 }
 
 .page4 .heading {
-  margin: 22px 13px 40px 13px;
-  padding: 15px 31px 14px 37px;
+  margin: 1.375rem 0.8125rem 2.5rem 0.8125rem;
+  padding: 0.9375rem 1.9375rem 0.875rem 2.3125rem;
 }
 
 .page4 .answer {
-  margin: 10px 59px 10px 19px;
+  margin: 0.625rem 3.6875rem 0.625rem 1.1875rem;
 }
 
 .page4 .button {
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .footer-text {
-  margin-left: 19px;
-  margin-bottom: 18px;
+  margin-left: 1.1875rem;
+  margin-bottom: 1.125rem;
   width: 57.92%;
 }
 .footer-code {
-  margin-bottom: 11px;
-  margin-right: 5px;
+  margin-bottom: 0.6875rem;
+  margin-right: 0.3125rem;
   color: white;
 }
 
