--- a/components/pages/page5/page5.module.css
+++ b/components/pages/page5/page5.module.css
@@ -11,20 +11,20 @@
 }
 
 .page-5 .heading {
-  margin: 20px 0 18px 0;
+  margin: 1.25rem 0 1.125rem 0;
   width: 69.53%;
   text-transform: none;
   text-align: center;
 }
 
 .purple-block {
-  padding: 15px 29px 15px 14px;
-  margin-bottom: 9px;
+  padding: 0.9375rem 1.8125rem 0.9375rem 0.875rem;
+  margin-bottom: 0.5625rem;
 }
 
 .block p {
-  font-size: 15px;
-  line-height: 18px;
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
   margin: 0;
 }
 
@@ -34,30 +34,30 @@
 }
 
 .green-block {
-  padding: 13px 16px 14px;
+  padding: 0.8125rem 1.0rem 0.875rem;
 }
 
 .footer-text {
   width: 62.29%;
-  margin-left: 30px;
-  margin-bottom: 8px;
+  margin-left: 1.875rem;
+  margin-bottom: 0.5rem;
   font-weight: 300;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
 }
 .footer-code {
-  margin-right: 5px;
-  margin-bottom: 11px;
-  font-size: 12px;
-  line-height: 14px;
+  margin-right: 0.3125rem;
+  margin-bottom: 0.6875rem;
+  font-size: 0.75rem;
+  line-height: 0.875rem;
 }
 
 .button {
   align-self: flex-end;
-  margin-top: 79px;
-  margin-right: -66px;
-  margin-bottom: 37px;
-  padding: 14px 60px 17px 59px;
+  margin-top: 4.9375rem;
+  margin-right: -4.125rem;
+  margin-bottom: 2.3125rem;
+  padding: 0.875rem 3.75rem 1.0625rem 3.6875rem;
 }
 
 @media screen and (max-width: 600px) {
