--- a/components/pages/page7/page7.module.css
+++ b/components/pages/page7/page7.module.css
@@ -3,29 +3,29 @@
 }
 
 .page7 .heading {
-  margin: 23px 13px 51px 22px;
-  padding: 16px 31px 17px 37px;
+  margin: 1.4375rem 0.8125rem 3.1875rem 1.375rem;
+  padding: 1rem 1.9375rem 1.0625rem 2.3125rem;
 }
 
 .page7 .answer {
-  padding-left: 75px;
-  padding-right: 90px;
-  margin: 8px 0;
-  margin-left: 45px;
+  padding-left: 4.6875rem;
+  padding-right: 5.625rem;
+  margin: 0.5rem 0;
+  margin-left: 2.8125rem;
 }
 
 .page7 .button {
-  margin-top: 31px;
+  margin-top: 1.9375rem;
 }
 
 .footer-text {
-  margin-left: 33px;
-  margin-bottom: 9px;
+  margin-left: 2.0625rem;
+  margin-bottom: 0.5625rem;
   width: 55.31%;
 }
 .footer-code {
-  margin-bottom: 11px;
-  margin-right: 5px;
+  margin-bottom: 0.6875rem;
+  margin-right: 0.3125rem;
   color: white;
 }
 
