--- a/components/pages/page8/page8.module.css
+++ b/components/pages/page8/page8.module.css
@@ -1,30 +1,30 @@
 .page-8 {
-  padding: 19px 23px 0px 22px;
+  padding: 1.1875rem 1.4375rem 0.0rem 1.375rem;
   flex-direction: column;
 }
 
 .pre-heading {
   font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
   text-transform: uppercase;
   color: #4f0b7b;
-  margin: 0 0 10px 0;
+  margin: 0 0 0.625rem 0;
 }
 
 .heading {
   width: 100%;
   margin: 0;
-  padding: 7px 0 6px 0;
+  padding: 0.4375rem 0 0.375rem 0;
   display: block;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #532f88;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1.0rem;
+  line-height: 1.25rem;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -39,13 +39,13 @@
 
 .block {
   background: #cdebec;
-  border-radius: 18px;
+  border-radius: 1.125rem;
   display: flex;
   flex-direction: column;
-  padding: 12px 0;
+  padding: 0.75rem 0;
   font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 0.8125rem;
+  line-height: 1.0rem;
   color: #532f88;
 }
 
@@ -54,21 +54,21 @@
   flex-direction: row;
   align-items: unset;
   width: 100%;
-  padding: 0 20px;
+  padding: 0 1.25rem;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-bottom: 9px;
+  margin-bottom: 0.5625rem;
 }
 
 .cell {
   display: flex;
-  margin: 6px 0;
+  margin: 0.375rem 0;
   width: fit-content;
   align-items: center;
 }
 
 .cell .text {
-  width: 146px;
+  width: 9.125rem;
 }
 
 .wide {
@@ -82,15 +82,15 @@
 .cell .icon {
   display: flex;
   align-items: center;
-  width: 30px;
-  height: 30px;
-  margin: 8px;
+  width: 1.875rem;
+  height: 1.875rem;
+  margin: 0.5rem;
 }
 
 .block h1 {
   font-weight: 700;
-  font-size: 13px;
-  line-height: 16px;
+  font-size: 0.8125rem;
+  line-height: 1.0rem;
   text-transform: uppercase;
   color: #532f88;
   width: 100%;
@@ -104,7 +104,7 @@
 }
 
 .excl {
-  margin-right: 21px;
+  margin-right: 1.3125rem;
 }
 
 .block p {
@@ -113,37 +113,37 @@
 
 .block-1 {
   width: 38.9%;
-  padding-left: 20px;
+  padding-left: 1.25rem;
 }
 
 .block-2 {
   width: 31.36%;
-  padding-left: 18px;
+  padding-left: 1.125rem;
 }
 
 .block-3 {
   width: 27.94%;
-  padding-left: 17px;
+  padding-left: 1.0625rem;
 }
 
 .button {
-  margin-top: 3px;
-  padding: 8px 40px 14px;
+  margin-top: 0.1875rem;
+  padding: 0.5rem 2.5rem 0.875rem;
   width: fit-content;
   align-self: flex-end;
-  line-height: 22px;
+  line-height: 1.375rem;
 }
 
 .footer-code {
-  margin-right: 5px;
-  margin-bottom: 11px;
+  margin-right: 0.3125rem;
+  margin-bottom: 0.6875rem;
 }
 .footer-text {
   font-weight: 300;
-  font-size: 9px;
-  line-height: 11px;
-  margin-left: 22px;
-  margin-bottom: 14px;
+  font-size: 0.5625rem;
+  line-height: 0.6875rem;
+  margin-left: 1.375rem;
+  margin-bottom: 0.875rem;
   width: 76.88%;
 }
 
