--- a/components/pages/page9/page9.module.css
+++ b/components/pages/page9/page9.module.css
@@ -5,59 +5,59 @@
 
 .pre-heading {
   font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
   text-transform: uppercase;
   color: #4f0b7b;
-  margin: 31px 75px 17px;
+  margin: 1.9375rem 4.6875rem 1.0625rem;
 }
 
 .blocks {
-  margin: 0 33px 0 27px;
+  margin: 0 2.0625rem 0 1.6875rem;
   display: flex;
 }
 
 .block {
-  margin: 0 5px;
+  margin: 0 0.3125rem;
   background: #dbcfed;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
 }
 
 .block-1 {
-  padding: 14px 11px 0 25px;
+  padding: 0.875rem 0.6875rem 0 1.5625rem;
 }
 .block-2 {
-  padding: 14px 18px 0px 22px;
+  padding: 0.875rem 1.125rem 0rem 1.375rem;
 }
 
 .block-heading h1 {
   font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
   color: #532f88;
 }
 
 .page-9 b {
   font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
+  font-size: 0.9375rem;
+  line-height: 1.125rem;
   color: #532f88;
 }
 
 .button {
-  padding: 14px 60px 17px 59px;
-  margin-top: 34px;
+  padding: 0.875rem 3.75rem 1.0625rem 3.6875rem;
+  margin-top: 2.125rem;
   align-self: flex-end;
-  margin-right: 22px;
+  margin-right: 1.375rem;
 }
 
 .footer-code {
-  margin-right: 5px;
-  margin-bottom: 11px;
+  margin-right: 0.3125rem;
+  margin-bottom: 0.6875rem;
 }
 .footer-text {
-  margin-left: 21px;
-  margin-bottom: 3px;
+  margin-left: 1.3125rem;
+  margin-bottom: 0.1875rem;
   width: 74.79%;
 }
 
