--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   font-family: Montserrat;
   padding-bottom: 100px;
+  font-size: 16px;
 }
 
 a {
@@ -15,4 +16,35 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1400px) {
+  html,
+  body {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  html,
+  body {
+    font-size: 11px;
+  }
+}
+@media screen and (max-width: 992px) {
+  html,
+  body {
+    font-size: 9px;
+  }
+}
+@media screen and (max-width: 768px) {
+  html,
+  body {
+    font-size: 7px;
+  }
+}
+@media screen and (max-width: 600px) {
+  html,
+  body {
+    font-size: 16px;
+  }
 }
