--- a/components/pages/page8/page8.module.css
+++ b/components/pages/page8/page8.module.css
@@ -1,5 +1,5 @@
 .page-8 {
-  padding: 1.1875rem 1.4375rem 0.0rem 1.375rem;
+  padding: 1.1875rem 1.4375rem 0rem 1.375rem;
   flex-direction: column;
 }
 
@@ -23,7 +23,7 @@
   background: #532f88;
   border-radius: 0.625rem;
   font-weight: 600;
-  font-size: 1.0rem;
+  font-size: 1rem;
   line-height: 1.25rem;
   text-transform: uppercase;
   color: #ffffff;
@@ -45,7 +45,7 @@
   padding: 0.75rem 0;
   font-weight: 400;
   font-size: 0.8125rem;
-  line-height: 1.0rem;
+  line-height: 1rem;
   color: #532f88;
 }
 
@@ -90,7 +90,7 @@
 .block h1 {
   font-weight: 700;
   font-size: 0.8125rem;
-  line-height: 1.0rem;
+  line-height: 1rem;
   text-transform: uppercase;
   color: #532f88;
   width: 100%;
@@ -274,6 +274,7 @@
     font-size: 6px;
     line-height: 8px;
     margin-left: 24px;
+    width: 177px;
     margin-bottom: 6px;
   }
 }
